--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,18 +2,20 @@
 <html>
 <head>
   <title>Bloccit</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-  
-<ul>
-  <li><%= link_to "Home", welcome_index_path %> </li>
-  <li><%= link_to "About", welcome_about_path %> </li>
-</ul>
+    <div class="container">
+       <ul>
+       <ul class="nav nav-tabs">
+        <li><%= link_to "Bloccit", welcome_index_path %></li>
+        <li><%= link_to "About", welcome_about_path %></li>
+      </ul>
 
-<%= yield %>
+      <%= yield %>
+     </div>
 
 </body>
 </html>
