set the user for postin seed file

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,7 @@
 <h1>All Posts</h1>
+<% if policy(Post.new).create?%>
+<%= link_to "New Post", new_post_path, class: 'btn btn-success' %>
+<% end %>
 <% @posts.each do |post| %>
   <p><%= link_to post.title, post %></p>
 
@@ -9,7 +12,7 @@
     </h4>
 
     <small>
-         submitted <%= time_ago_in_words(post.created_at) %> ago by <%= post.user.name %><br/>
+         submitted <%= time_ago_in_words(post.created_at) %> ago by <%= post.user.name %>  with 
          <%= post.comments.count %> Comments
     </small>
    </div>
