--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,6 +1,6 @@
 <h1>Posts#new</h1>
 <p>Find me in app/views/posts/new.html.erb</p>
- <%= form_for @post do |f| %>
+ <%= form_for [@topic,@post] do |f| %>
    <%= f.label :title %>
    <%= f.text_field :title %>
  
@@ -21,7 +21,7 @@
      </ul>
    </div>
    <div class="col-md-8">
-     <%= form_for @post do |f| %>
+     <%= form_for [@topic, @post] do |f| %>
        <div class="form-group">
          <%= f.label :title %>
          <%= f.text_field :title, class: 'form-control', placeholder: "Enter post title" %>
