--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -11,12 +11,14 @@
       <div class="media">
         <div class="media-body">
           <h4 class="media-heading">
-            <%= link_to (markdown post.title), [@topic,post] %>
-          </h4>
+   <%= link_to (markdown post.title), [@topic, post] %>
+    </h4>
           <small>
-     submitted <%= time_ago_in_words(post.created_at) %> ago by <%= post.user.name %><br/>
-     <%= post.comments.count %> Comments
-   </small>
+             <%= image_tag(post.user.avatar.tiny.url) if post.user.avatar? %>
+             submitted <%= time_ago_in_words(post.created_at) %> ago by
+             <%= post.user.name %><br/>
+             <%= post.comments.count %> Comments
+           </small>
         </div>
       </div>
     <% end %>
@@ -26,4 +28,4 @@
       <%= link_to "New Post", new_topic_post_path(@topic), class: 'btn btn-success' %>
     <% end %>
   </div>
-</div>
+</div> 
