--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -19,7 +19,12 @@
              <%= post.user.name %><br/>
              <%= post.comments.count %> Comments
            </small>
-           
+          
+           <small>
+             <%= image_tag(post.image) %>
+            </small>
+
+
         </div>
       </div>
     <% end %>
