--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,21 +1,24 @@
+
+
 <h1><%= markdown @post.title %></h1> 
-
-<div class="row">
-  <div class="col-md-8">
-     <small>
-       <%= image_tag(@post.user.avatar.tiny.url) if @post.user.avatar? %>
-       submitted <%= time_ago_in_words(@post.created_at) %> ago by<%= @post.user.name %>
-     </small>
-    <p> <%= markdown @post.body %>
-      <small>
-             <%= image_tag(@post.image) %>
-            </small>
-    </p>
+<p> <%= markdown @post.body%></p>
+  <div class="row">
+    <div class="col-md-8">  
+      <h3> Comments:</h3>  
+        <% @comments.each do |comment| %>
+        <div class="media">
+          <div class="media-body">
+            <h4 class="media-heading">
+            <%= comment.body%>
+            </h4>
+        <% end %>
+          </div>
+        </div>
+    </div>
   </div>
-  <div class="col-md-4">
-    <% if policy(@post).edit? %>
-      <%= link_to "Edit", edit_topic_post_path(@topic, @post), class: 'btn btn-success' %>
-    <% end %>
-   </div>
-</div>
 
+  <div class="col-md-4">
+      <% if policy(@post).edit? %>
+        <%= link_to "Edit", edit_topic_post_path(@topic, @post), class: 'btn btn-success' %>
+      <% end %>
+  </div>
