--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,8 +1,6 @@
-
-
 <h1><%= markdown @post.title %></h1> 
-<p> <%= markdown @post.body%></p>
-  <div class="row">
+<p> <%= markdown @post.body%></p>   
+<div class="row">
     <div class="col-md-8">  
       <h3> Comments:</h3>  
         <% @comments.each do |comment| %>
@@ -14,11 +12,11 @@
         <% end %>
           </div>
         </div>
-    </div>
-  </div>
 
-  <div class="col-md-4">
-      <% if policy(@post).edit? %>
-        <%= link_to "Edit", edit_topic_post_path(@topic, @post), class: 'btn btn-success' %>
-      <% end %>
-  </div>
+        <div class="col-md-8">
+     
+          <% render "form", class: 'btn btn-success' %>
+   </div>
+</div>
+
+
