--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,1 +1,18 @@
-<p>Comments: <%= comment.body%> </p>
+<div class="row">
+    <div class="col-md-8">  
+      <h3> Comments:</h3>  
+        <% @comments.each do |comment| %>
+        <div class="media">
+          <div class="media-body">
+            <h5 class="media-heading">
+            <%= comment.body%>  
+            <%= link_to "Delete",[comment.post, comment], :confirm => 'Are you sure?', :method => :delete %>
+            </h5>      
+          </div>
+        </div>
+        <% end %>
+ 
+    </div>    
+     
+
+  
