--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,22 +1,17 @@
 <h1><%= markdown @post.title %></h1> 
 <p> <%= markdown @post.body%></p>   
-<div class="row">
-    <div class="col-md-8">  
-      <h3> Comments:</h3>  
-        <% @comments.each do |comment| %>
-        <div class="media">
-          <div class="media-body">
-            <h4 class="media-heading">
-            <%= comment.body%>
-            </h4>
-        <% end %>
-          </div>
-        </div>
-
-        <div class="col-md-8">
-     <%= render :partial => "comments/form", locals: {post: @post, comment: @comment}, class: 'btn btn-success' %>
-        
-   </div>
-</div>
+<%= render :partial => "/comments/comment", locals: {post: @post, comment: @comment} %> 
+  
+    <div class="col-md-8">
+      <%= render :partial => "comments/form", locals: {post: @post, comment: @comment}, class: 'btn btn-success' %>
+  
+       <% if policy( @post).edit? %>
+         <%= link_to "Edit Post", edit_post_path(@topic,@post), class: 'btn btn-success' %>
+       <% end %>
+   
+       <% if policy(@post).destroy? %>
+         <%= link_to "Delete Post", [@topic, @post], :method => :delete, class: 'btn btn-danger', :confirm => 'are you sure you want to delete' %>
+       <% end %>
+    </div>
 
 
