--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -6,12 +6,11 @@
       <%= render :partial => "comments/form", locals: {post: @post, comment: @comment}, class: 'btn btn-success' %>
   
        <% if policy( @post).edit? %>
-         <%= link_to "Edit Post", edit_post_path(@topic,@post), class: 'btn btn-success' %>
+         <%= link_to "Edit Post", edit_topic_post_path(@topic,@post), class: 'btn btn-success' %>
        <% end %>
    
        <% if policy(@post).destroy? %>
          <%= link_to "Delete Post", [@topic, @post], :method => :delete, class: 'btn btn-danger', :confirm => 'are you sure you want to delete' %>
        <% end %>
     </div>
-
 
