--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,4 +1,6 @@
-<div class="row">
+<%= content_tag :div, class: 'media', id: "comment-#{comment.id}" do %>
+  
+  <div class="row">
     <div class="col-md-8">  
       <h3> Comments:</h3>  
         <% @comments.each do |comment| %>
@@ -11,8 +13,7 @@
           </div>
         </div>
         <% end %>
- 
-    </div>    
-     
+        
+<% end %>
 
   
