--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,6 +1,5 @@
 <div><h1><%= markdown @post.title %> </h1> </div>
   <%= render :partial => "/ballots/ballot", locals: {post: @post, ballot: @ballot } %>
-
  
 <p> <%= markdown @post.body%></p>   
   <div class="row">
@@ -9,6 +8,7 @@
     <%= render :partial => "/comments/comment", locals: {post: @post,comment: @comment} %> 
     </div>
   </div>
+ 
   <div class="col-md-8">
     <%= render :partial => "comments/form", locals: {post: @post, comment: @comment}, class: 'btn btn-success' %>
   
@@ -27,6 +27,8 @@
         <%= pluralize(@post.down_ballots, 'down vote') %>
       </small>
     </div>
-
+   
+      <%= render :partial => "favorites/favorite", locals:
+       {post: @post} %>
   </div>
 
