--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -8,7 +8,7 @@
           <div class="media-body">
             <h5 class="media-heading">
             <%= comment.body%>  
-            <%= link_to "Delete",[comment.post, comment], :confirm => 'Are you sure?', :method => :delete %>
+            <%= link_to "Delete",[comment.post, comment], :confirm => 'Are you sure?', :method => :delete, remote: true %>
             </h5>      
           </div>
         </div>
