added ajax to create function for post/comment, created view

--- a/app/views/topics/posts/show.html.erb
+++ b/app/views/topics/posts/show.html.erb
@@ -4,22 +4,25 @@
 <p> <%= markdown @post.body%></p>   
   <div class="row">
     <div class="col-md-8">
-    
+    <h2> Comments</h2>
+    <div class='js-comments'>
     <%= render partial: "comments/comment", locals: {topic: @topic, post: @post, comment: @comment} %> 
     </div>
+    </div>
   </div>
- 
+
   <div class="col-md-8">
+    <div class= 'new-comment'>
     <%= render :partial => "comments/form", locals: {post: @post, comment: @comment}, class: 'btn btn-success' %>
   
     <% if policy(@post).edit? %>
-      <%= link_to "Edit Post", edit_topic_post_path(@topic,@post),class: 'btn btn-success' %>
+      <%= link_to "Edit Post", edit_topic_post_path(@topic,@post), class: 'btn btn-success' %>
     <% end %>
    
     <% if policy(@post).destroy? %>
       <%= link_to "Delete Post", [@topic, @post], :method => :delete, class: 'btn btn-danger', :confirm => 'are you sure you want to delete' %>
     <% end %>
-
+    </div>
     <div>
       <h3> <%=pluralize(@post.points, 'point') %> </h3>
       <small>
