added comments to route

--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -6,7 +6,7 @@
       <div class="media">
         <div class="media-body">
           <h4 class="media-heading">
-            <%= link_to topic.name,topic_post_path,[topic, @post] %>
+            <%= link_to topic.name,topic_path(topic) %>
           </h4>
           <small>
             <%= topic.description %>
