--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,19 +1,18 @@
-<%= form_for [@post, @post.comments.build], remote: true do |f| %>
-  <% if comment.errors.any? %>
-    <div class="alert alert-danger">
-      <h4>There are <%= pluralize(comment.errors.count, "error") %>.</h4>
+<%= form_for ([@post, @comment]) do |f| %>
+  <% if @comment.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@comment.errors.count, "error") %> prohibited this comment from being saved:</h2>
       <ul>
-        <% comment.errors.full_messages.each do |msg| %>
-          <li><%= msg %></li>
-        <% end %>
+      <% @comment.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
       </ul>
     </div>
   <% end %>
-  <%= form_group_tag(comment.errors[:body]) do %>
-    <%= f.label :body %>
-    <%= f.text_area :body, rows: 8, class: 'form-control', placeholder: "Enter comment body" %>
-  <% end %>
   <div class="form-group">
-    <%= f.submit "Save", class: 'btn btn-success' %>
+    <%= f.text_field :body, class: 'form-control', placeholder: "Write your comment here" %>
+  </div>
+  <div class="actions">
+    <%= f.submit "Send", class: 'btn btn-primary' %>
   </div>
 <% end %>
