--- a/app/views/topics/posts/show.html.erb
+++ b/app/views/topics/posts/show.html.erb
@@ -13,7 +13,7 @@
 
   <div class="col-md-8">
     <div class= 'new-comment'>
-      <%= render :partial => "comments/form", locals: {post: @post, comment: @comment}, class: 'btn btn-success' %>
+      <%= render :partial => "comments/form", locals: {topic: @topic, post: @post, comment: @comment} %>
   
       <% if policy(@post).edit? %>
       <%= link_to "Edit Post", edit_topic_post_path(@topic,@post), class: 'btn btn-success' %>
