--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -1,27 +1,16 @@
 <p id="notice"> <%= notice %></p>
 
-<h1> <%= @topic.title %></h1>
+  <h1> <%= @topic.name %></h1>
+  <p>  <%= @topic.description %> </p>
 
-<p>  <%= @topic.content %> </p>
 
-<%= link_to 'Edit Topic', edit_topic_path(@topics) %> |
+<%= link_to 'Edit Topic', edit_topic_path(@topic) %> |
 <%= link_to 'Back', topics_path %>
 
 <h2> Posts </h2>
-  <%= form_tag topic_path(@topic, @posts), :method => :get do %>
-  <p>
-    <%= text_field_tag :search, params[:search] %>
-    <%= submit_tag "search", :title => nil %>
-  </p>
-  <% end %>
-
+  
 <table class="table" style="width:100%" >
-  <tr>
-    <th><%= sortable 'title' %></th>
-    <th><%= sortable 'points' %></th> 
-    <th><%= sortable 'created_at', 'Date' %></th>
-  </tr>
-   <% @posts.each do |post| %>
+  <% @posts.each do |post| %>
   <tr>
     <td><%= link_to post.title, [@topic, post] %></td>
     <td><%=pluralize(post.points, 'point') %></td> 
